k8s/ring-sink-service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: ring-sink-clusterip
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
  selector:
    app: ring-sink
  type: ClusterIP
